dark mode fix:#3

--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ body {
 
 #form input,
 #form select {
+    box-sizing: border-box;
     width: 100%;
     padding: 5px;
     margin: 5px 0;
@@ -144,4 +145,54 @@ body {
 #language_switch:hover {
     transform: scale(1.3);
     transition: transform 0.5s ease;
+}
+
+/* Dark mode */
+
+.dark_mode {
+    background-color: #333;
+    color: #fff;
+}
+
+.dark_mode #form {
+    background-color: #444;
+    color: #fff;
+}
+
+.dark_mode #form input,
+.dark_mode #form select {
+    background-color: #555;
+    color: #fff;
+}
+
+.dark_mode #form button {
+    background-color: #666;
+    color: #fff;
+}
+
+.dark_mode #form button.green_button {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.dark_mode .platform {
+    background-color: #444;
+    color: #fff;
+}
+
+.dark_mode .track_display {
+    background-color: #555;
+    color: #fff;
+}
+
+.dark_mode #dark_mode_button {
+    display: none;
+}
+
+.dark_mode #light_mode_button {
+    display: flex;
+}
+
+#light_mode_button {
+    display: none;
 }
